# applications

./: .gitignore  CMakeLists.txt  LICENSE  README.md  controller.cpp  iiwa_control.cc
MRI_geom/: SPD_fMRI.py  SPD_fMRI_example.py  spd_fmri.py
MRI_geom/AdditionalInformation/: rs_fMRI_FNC_mapping.csv
brain_connectome/: README.md  requirements.txt  spd_fmri.py
deep_learning/: README.md  cifar_10_resnet_hypersphere.py  mnist_hypersphere.py
examples/: CMakeLists.txt
examples/01-create_model_from_file/: main.cpp  pbot.urdf
examples/02-update_model/: CMakeLists.txt  main.cpp
modulation_empirical_frechet_mean/: README.md  empirical_mean_hyperbolic.py  empirical_mean_sphere.py
mri_geom/: spd_fmri.py
nips2018/: README.md
nips2018/brain_connectome/: README.md  spd_fmri.py
nips2018/deep_learning/: README.md  mnist_hypersphere.py  run.sh
nips2018/deep_learning/tf_patch/: variables.py
nips2018/geomstats/: LICENSE.md  README.md  setup.py
nips2018/geomstats/examples/: gradient_descent_s2.py  loss_and_gradient_se3.py  tangent_pca_so3.py
nips2018/geomstats/geomstats/: hypersphere.py  product_manifold.py  product_riemannian_metric.py  riemannian_metric.py  spd_matrices_space.py  special_euclidean_group.py  special_orthogonal_group.py
nips2018/geomstats/geomstats/backend/: tensorflow.py
nips2018/geomstats/tests/: test_examples.py  test_hyperbolic_space.py  test_hypersphere.py  test_invariant_metric.py  test_special_euclidean_group.py  test_special_orthogonal_group.py  test_visualization.py
nips2018/mri/add_info/: comp_ind_fmri.csv
nips2018/mri_geom/: README.md  requirements.txt  spd_fmri.py
nips2018/robotics/: CMakeLists.txt  README.md  robot_so3.py  run_simulation.sh
nips2018/robotics/dependencies/sai2-model/: README.md  install.sh
nips2018/robotics/dependencies/sai2-model/rbdl/: .hg_archival.txt
nips2018/robotics/dependencies/sai2-model/src/: Sai2Model.cpp  Sai2Model.h
nips2018/robotics/dependencies/sai2-urdfreader/: SAI2-URDFConfig.cmake.in
nips2018/robotics/dependencies/sai2-urdfreader/examples/02-world_parse/: CMakeLists.txt  world.urdf
nips2018/robotics/dependencies/sai2-urdfreader/src/urdf/urdfdom/urdf_parser/include/urdf_parser/: urdf_parser.h
nips2018/robotics/dependencies/sai2-urdfreader/src/urdf/urdfdom/urdf_parser/src/: joint.cpp  link.cpp  urdf_model_state.cpp
nips2018/robotics/utils/: loop_timer.cc  redis_client.h
quantization/: optimal_quantization.py  plot_quantization_s1.py  plot_quantization_s1_uniform.py  plot_quantization_s2.py
quantization/test/: test_optimal_quantization.py
rbdl/: CMakeLists.txt
robotics/: LICENSE  README.md  controller.cc  iiwa_control.cc  robot_so3.py
robotics/dependencies/sai2-model/: CMakeLists.txt  LICENSE  SAI2-MODELConfig.cmake.in
robotics/dependencies/sai2-model/examples/: CMakeLists.txt
robotics/dependencies/sai2-model/examples/01-create_model_from_file/: CMakeLists.txt
robotics/dependencies/sai2-model/examples/02-update_model/: rpbot.urdf
robotics/dependencies/sai2-model/src/parser/: UrdfToSai2Model.cpp  UrdfToSai2Model.h
robotics/dependencies/sai2-urdfreader/: install.sh
robotics/dependencies/sai2-urdfreader/examples/01-robot_parse/: CMakeLists.txt  main.cpp
robotics/dependencies/sai2-urdfreader/examples/02-world_parse/: main.cpp
robotics/dependencies/sai2-urdfreader/src/urdf/boost_replacement/: printf_console.cpp
robotics/dependencies/sai2-urdfreader/src/urdf/urdfdom/urdf_parser/src/: graphics.cpp  model.cpp  pose.cpp  urdf_sensor.cpp  world.cpp
robotics/dependencies/sai2-urdfreader/src/urdf/urdfdom_headers/urdf_world/include/urdf_world/: world.h
se3_pose_estimation/: README.md  make_dataset_kingscollege.py  test_se3_kingscollege.py  train_se3_kingscollege.py
src/: Sai2Model.cpp  Sai2Model.h
src/urdf/urdfdom/urdf_parser/src/: twist.cpp
